--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Swetha Kalyanakrishnan - Chartered Accountant Portfolio. Transforming Financial Data into Strategic Insights through Assurance Excellence & AI-Enhanced Analytics." />
     <meta name="keywords" content="Chartered Accountant, CA, Audit, Financial Analysis, AI in Finance, Swetha Kalyanakrishnan" />
